# lilos

examples/rp2040/minimal/: Cargo.toml
examples/rp2040/minimal/src/: main.rs
examples/rp2040/multicore/: Cargo.toml
examples/rp2040/multicore/src/: main.rs
examples/rp2040/profiling/: Cargo.toml  build.rs  flash-memory.x  ram-link.x  ram-memory.x
examples/rp2040/profiling/.cargo/: config.toml
examples/rp2040/profiling/src/: main.rs
os/: Cargo.toml
os/src/: exec.rs  lib.rs  list.rs  mutex.rs  time.rs
os/src/time/: systick.rs
